Firxed some hardcoded credentials and some other security fixes.
